--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -34,10 +34,18 @@
 //    min-height: 150px;
 //    width: 100%;
 //}
+$nav-height: 57.41px;
+$brand-color: #891b17;
+$saira-con: 'Saira Semi Condensed', sans-serif;
 
-html,body{ height:100%; }
+html,body{ height:100%; background-color: #4c110f; font-family: $saira-con; }
+.container { max-width: 100%; }
+.content.container { min-height: calc(100vh - #{$nav-height}); padding-left: 2rem; padding-right: 2rem; background-color: #fff; }
 a:hover { text-decoration: none; }
 .text-bold { font-weight: bold; }
+.brand-color { color: $brand-color !important; }
+a.brand-color:hover { color: #4c110f !important; }
+.saira-con { font-family: 'Saira Semi Condensed', sans-serif; }
 
 .account-details { display: flex; width: 100%; }
 .account-details-col-1 { width: 25%; }
@@ -47,6 +55,7 @@ a:hover { text-decoration: none; }
 .table-wrap { max-width: 100vw; overflow-x: auto; }
 .table-wrap::-webkit-scrollbar { background-color: #818182; height: 8px; }
 .table-wrap::-webkit-scrollbar-thumb { background-color: #4e555b; }
+.account-recent-orders table th { border-top: none; }
 .account-recent-orders table th, .account-recent-orders table td { white-space: nowrap; }
 
 @include media-breakpoint-up(sm) {
@@ -54,6 +63,8 @@ a:hover { text-decoration: none; }
     //    width:  150px;
     //    height: 150px;
     //}
+
+    //.container { max-width: 100%; }
 }
 
 @include media-breakpoint-up(md) {
@@ -61,6 +72,9 @@ a:hover { text-decoration: none; }
     //    width:  210px;
     //    height: 210px;
     //}
+
+    .container { max-width: 960px; }
+    .content.container { padding-left: 4rem; padding-right: 4rem; }
 }
 
 @include media-breakpoint-up(lg) {
@@ -72,6 +86,8 @@ a:hover { text-decoration: none; }
     //.account-bio {
     //    height: 200px;
     //}
+
+    .container { max-width: 1140px; }
 
     .account-details-col-1 { width: 20%; }
     .account-details-col-2 { width: 80%; }
